# codingplan

./: .gitignore  AGENTS.md  README.md  install.sh  pyproject.toml
.codingplan/: email.conf.example
.cursor/rules/: api-design.mdc  code-quality.mdc  codingplan-workflow.mdc  database.mdc  error-handling.mdc  multi-platform.mdc  security.mdc  testing.mdc  ui-implementation.mdc
.cursor/skills/codingplan-detail-design/: SKILL.md
.cursor/skills/codingplan-implement/: SKILL.md
.cursor/skills/codingplan-outline/: SKILL.md
.cursor/skills/codingplan-requirement/: SKILL.md
.cursor/skills/codingplan-test-design/: SKILL.md
.cursor/skills/codingplan-test-impl/: SKILL.md
Formula/: codingplan.rb
codingplan/: __init__.py  agent.py  cli.py  config.py  figma.py  init_cmd.py  logger.py  notify.py  prompts.py  workflow.py
docs/: AGENTS-CLAUDE-RULES-PROMPTS-SKILLS.md  CODINGPLAN-RULES-PROMPTS-SKILLS.md  EMAIL-NOTIFICATION.md  EXAMPLE.md  FIGMA-DESIGN.md  PUBLISH.md  TROUBLESHOOTING.md
scripts/: install-from-repo.sh  prepare-homebrew-tap.sh  publish-pypi.sh
uidesign/: README.md  feature-a.md
