[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codingplan"
version = "0.1.0"
description = "基于 Cursor CLI 的自动化需求处理、代码实现与测试闭环工具"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{name = "CodingPlan"}]
keywords = ["cursor", "automation", "requirements", "workflow", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]

dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff"]
publish = ["build", "twine"]

[project.scripts]
codingplan = "codingplan.cli:main"

[project.urls]
Homepage = "https://gitee.com/project_hub_1/codingplan"
Repository = "https://gitee.com/project_hub_1/codingplan"
Documentation = "https://gitee.com/project_hub_1/codingplan/blob/main/README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["codingplan*"]
